plugins {
    id 'java'
    id 'org.springframework.boot' version '3.0.0'
    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
    id 'com.google.cloud.tools.jib' version '3.4.0'
}

group = 'com.example'
version = '1.0.0'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot Starters
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa' // JPA
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    // implementation 'org.springframework.boot:spring-boot-starter-webflux' // for WebClient
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-validation' // for Bean Validation

    // Database Drivers
    runtimeOnly 'com.mysql:mysql-connector-j'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // JWT
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // SpringDoc OpenAPI (Swagger) UI
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'

    // MinIO Client
    // implementation 'io.minio:minio:8.5.2'
    
    // AWS S3 SDK
    // implementation 'io.awspring.cloud:spring-cloud-starter-aws:2.4.4'

    // Test Dependencies
    testImplementation 'com.h2database:h2' // H2 for in-memory testing

    // WebClient (Spring WebFlux)
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // cloud sql
    implementation 'com.google.cloud.sql:mysql-socket-factory-connector-j-8:1.15.0'

    // Google Cloud Storage
    implementation 'com.google.cloud:google-cloud-storage:2.30.0'
}

tasks.named('test') {
    useJUnitPlatform()
}

def querydslDir = "src/main/generated"

sourceSets {
    main.java.srcDirs += [ querydslDir ]
}

tasks.withType(JavaCompile) {
    options.annotationProcessorGeneratedSourcesDirectory = file(querydslDir)
}

clean.doLast {
    file(querydslDir).deleteDir()
}

jib {
    from {
        image = 'eclipse-temurin:17-jre-alpine'
    }
    to {
        image = "gcr.io/${System.getenv('PROJECT_ID') ?: 'your-project-id'}/gyeol-backend"
        tags = ['latest', version]
    }
    container {
        jvmFlags = ['-Xms256m', '-Xmx512m', '-XX:+UseG1GC']
        ports = ['8080']
        environment = [
                'SPRING_PROFILES_ACTIVE': 'prod'
        ]
        creationTime = 'USE_CURRENT_TIMESTAMP'
    }
}